feature: (wip) introduce short url module
