# klink-rest/src/main/java/com/drbrosdev/klinkrest/shorturl/KlinkShortUrlManagement.java
@@ -1,0 +1,19 @@
+package com.drbrosdev.klinkrest.shorturl;
+
+import jakarta.annotation.Nullable;
+import org.openapitools.api.ShortUrlApi;
+import org.openapitools.model.KlinkShortUrlApiDto;
+import org.springframework.http.ResponseEntity;
+
+import java.util.UUID;
+
+public class KlinkShortUrlManagement implements ShortUrlApi {
+
+    @Override
+    public ResponseEntity<KlinkShortUrlApiDto> getKlinkShortUrl(
+            UUID klinkId,
+            String readKey,
+            @Nullable String writeKey) {
+        return null;
+    }
+}
